# ISSC-SWS-Backend

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/api/: __init__.py
app/api/endpoints/: algorithm1.py  algorithm2.py  algorithm3.py  conversation.py  llm.py
app/core/: __init__.py  config.py  security.py
app/data/algorithm1/: predictions_arima_auto.json
app/data/chemical_plant_dataset_1day/: metadata.json  monitoring_points.csv
app/data/chemical_plant_dataset_1hour/: metadata.json  monitoring_points.csv
app/db/: __init__.py  tortoise.py
app/models/: __init__.py
app/models/algorithm1/: algorithm1_config.py  predictions_arima_auto.py  predictions_timemixer_auto.py
app/models/algorithm2/: algorithm2_config.py  algorithm2_result.py
app/models/algorithm3/: algorithm3_config.py  algorithm3_result.py
app/models/llm/: conversation.py  message.py
app/schemas/: __init__.py
app/schemas/algorithm1/: algorithm1_result.py
app/schemas/algorithm2/: algorithm2_config.py  algorithm2_result.py
app/schemas/algorithm3/: algorithm3_config.py  algorithm3_result.py
app/schemas/llm/: conversation.py  message.py
app/services/: __init__.py
app/services/algorithm2/: covert_csv_to_json.py  knowledge.py
app/services/algorithm3/: prediction.py  start.py  train.py
app/utils/: csv_builder.py  csv_importer.py  httpx_client.py  json_importer.py  timezone.py
migrations/models/: 0_20250511135341_init.py  0_20250512160325_init.py  10_20250430172505_update.py  1_20250512161348_update.py  2_20250425050014_None.py  2_20250515222627_update.py  3_20250427152436_update.py  4_20250427212343_update.py  5_20250427213233_update.py  6_20250427213734_update.py  7_20250430170914_update.py  8_20250430171029_update.py  9_20250430171049_update.py
tests/: __init__.py  test_algorithm2.py
(+139 files in other folders)
