[project]
name = "issc-sws-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aerich==0.8.2",
    "aiosqlite==0.21.0",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "asyncclick==8.1.8.0",
    "asyncmy==0.2.10",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "colorama==0.4.6",
    "dictdiffer==0.9.0",
    "distro==1.9.0",
    "fastapi==0.115.12",
    "filelock==3.18.0",
    "fsspec==2025.3.2",
    "h11==0.14.0",
    "httpcore==1.0.8",
    "httpx==0.28.1",
    "idna==3.10",
    "iniconfig==2.1.0",
    "iso8601==2.1.0",
    "jinja2==3.1.6",
    "jiter==0.9.0",
    "joblib==1.4.2",
    "lightgbm==4.6.0",
    "markupsafe==3.0.2",
    "mpmath==1.3.0",
    "networkx==3.4.2",
    "numpy==2.2.5",
    "openai==1.76.0",
    "packaging==25.0",
    "pandas==2.2.3",
    "pluggy==1.5.0",
    "pydantic==2.11.3",
    "pydantic-core==2.33.1",
    "pypika-tortoise==0.5.0",
    "pytest==8.3.5",
    "pytest-asyncio==0.26.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "pytorch-tabnet==4.1.0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "requests==2.32.3",
    "scikit-learn==1.6.1",
    "scipy==1.15.2",
    "setuptools==79.0.1",
    "six==1.17.0",
    "sniffio==1.3.1",
    "starlette==0.46.2",
    "sympy==1.13.3",
    "threadpoolctl==3.6.0",
    "tomlkit==0.13.2",
    "torch==2.7.0",
    "tortoise-orm==0.25.0",
    "tqdm==4.67.1",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.0",
    "tzdata==2025.2",
    "urllib3==2.4.0",
    "uvicorn==0.34.2",
    "xgboost==3.0.0",
]

[tool.aerich]
tortoise_orm = "app.db.tortoise.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
